--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@ button {
   background: #967100;
   border: none;
   border-radius: 2px;
-  padding: .5rem 2rem;
+  padding: 0.5rem 2rem;
   font-size: 1rem;
   font-weight: 400;
   color: white;
@@ -57,7 +57,7 @@ a:visited {
   display: inline-flex;
   flex-direction: column;
   align-items: center;
-  margin: .5rem;
+  margin: 0.5rem;
 }
 
 .interactive {
@@ -65,7 +65,7 @@ a:visited {
 }
 
 .headshot {
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
   width: 9rem;
   height: 9rem;
   border-radius: 4.5rem;
@@ -74,7 +74,7 @@ a:visited {
 
 .gallery-item.interactive .headshot {
   filter: grayscale(100%);
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .gallery-item.interactive:hover .headshot {
@@ -90,7 +90,7 @@ a:visited {
 }
 
 #leaderboard .badge {
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
   width: 8rem;
   height: 8rem;
   border-radius: 4rem;
@@ -100,7 +100,7 @@ a:visited {
 #leaderboard .name {
   font-weight: normal;
   font-style: italic;
-  font-size: .7rem;
+  font-size: 0.7rem;
 }
 
 .modal-container {
@@ -109,7 +109,7 @@ a:visited {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, .3);
+  background: rgba(0, 0, 0, 0.3);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -117,7 +117,7 @@ a:visited {
   z-index: 999;
   visibility: hidden;
   opacity: 0;
-  transition: .2s ease-out;
+  transition: 0.2s ease-out;
 }
 
 .modal-container .modal {
@@ -126,8 +126,8 @@ a:visited {
   overflow: auto;
   padding: 2rem;
   background: #fff;
-  border-radius: .5rem;
-  transition: .2s ease-out;
+  border-radius: 0.5rem;
+  transition: 0.2s ease-out;
   position: relative;
 }
 
@@ -137,7 +137,7 @@ a:visited {
 }
 
 #content {
-  transition: .2s ease-out;
+  transition: 0.2s ease-out;
 }
 
 .row {
@@ -160,7 +160,7 @@ a:visited {
 .x-button {
   cursor: pointer;
   position: absolute;
-  top: .5rem;
+  top: 0.5rem;
   right: 1rem;
   font-size: 2rem;
   font-weight: 100;
@@ -179,19 +179,19 @@ a.donate-with-crypto {
 
 .medal-form {
   /* This bit sets up the horizontal layout */
-  display:flex;
-  flex-direction:row;
-  
+  display: flex;
+  flex-direction: row;
+
   /* This bit draws the box around it */
-  border:1px solid grey;
+  border: 1px solid grey;
 
   /* I've used padding so you can see the edges of the elements. */
-  padding:2px;
+  padding: 2px;
 }
 
 .medal-form input {
   /* Tell the input to use all the available space */
-  flex-grow:2;
+  flex-grow: 2;
   /* And hide the input's outline, so the form looks like the outline */
-  border:none;
+  border: none;
 }
