--- a/assets/style.css
+++ b/assets/style.css
@@ -1,127 +1,241 @@
-body.noscroll {
-  overflow: hidden;
+@supports (font: -apple-system-body) {
+    :root {
+        font: -apple-system-body;
+    }
 }
 
-a {
-  color: black;
-  font-weight: bold;
+@font-face {
+    font-display: swap;
+    font-family: "Times Newer Roman";
+    font-style: normal;
+    font-weight: 400;
+    src: url(/fonts/TimesNewerRoman-Regular.otf) format("opentype")
 }
 
-a:visited {
-  color: #888;
+@font-face {
+    font-display: swap;
+    font-family: "Times Newer Roman";
+    font-style: normal;
+    font-weight: 700;
+    src: url(/fonts/TimesNewerRoman-Bold.otf) format("opentype")
 }
 
-.interactive {
-  cursor: pointer;
-}
-
-.gallery-item.interactive:hover .headshot {
-  filter: grayscale(0);
-}
-
-#leaderboard .badge {
-  margin-bottom: 0.75rem;
-  width: 8rem;
-  height: 8rem;
-  border-radius: 4rem;
-  object-fit: cover;
-}
-
-#leaderboard .name {
-  font-weight: normal;
-  font-style: italic;
-  font-size: 0.7rem;
-}
-
-.modal-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.3);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 1rem;
-  z-index: 999;
-  visibility: hidden;
-  opacity: 0;
-  transition: 0.2s ease-out;
-}
-
-.modal-container .modal {
-  max-width: 40rem;
-  max-height: 80vh;
-  overflow: auto;
-  padding: 2rem;
-  background: #fff;
-  border-radius: 0.5rem;
-  transition: 0.2s ease-out;
-  position: relative;
-}
-
-.modal-container.open {
-  visibility: visible;
-  opacity: 1;
+@font-face {
+    font-display: swap;
+    font-family: "Monaco";
+    font-style: normal;
+    font-weight: 400;
+    src: local(Monaco), url(fonts/Monaco.ttf) format("truetype")
 }
 
 #content {
-  transition: 0.2s ease-out;
+    transition: .2s ease-out
 }
 
-.row {
-  display: flex;
-  flex-direction: row;
+#leaderboard .badge {
+    border-radius: 4rem;
+    height: 8rem;
+    margin-bottom: .75rem;
+    object-fit: cover;
+    width: 8rem
 }
 
-.justify-center {
-  justify-content: center;
+#leaderboard .name {
+    font-size: .7rem;
+    font-style: italic;
+    font-weight: 400
 }
 
 .align-center {
-  align-items: center;
+    align-items: center
+}
+
+.bf,
+.gallery-item .name {
+    font-weight: 700
 }
 
 .center {
-  text-align: center;
+    text-align: center
+}
+
+.content-container {
+    margin: 2rem auto;
+    max-width: 40rem;
+    padding: 0 1rem
+}
+
+.content-container>h2:first-child {
+    margin-top: 0
+}
+
+.contribute-container {
+    border: 1px solid #967100;
+    box-sizing: border-box;
+    font-size: 1.2rem;
+    padding: 1rem;
+    text-align: center
+}
+
+.gallery {
+    margin: 0 auto;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    max-width: 40rem;
+    text-align: center
+}
+
+.gallery-item {
+    align-items: center;
+    display: inline-flex;
+    flex-direction: column;
+    margin: .5rem
+}
+
+.gallery-item .tagline {
+    font-size: .9rem
+}
+
+.gallery-item.interactive .headshot {
+    filter: grayscale(100%);
+    transition: .3s
+}
+
+.gallery-item.interactive:hover .headshot {
+    filter: grayscale(0)
+}
+
+.headshot {
+    border-radius: 4.5rem;
+    height: 9rem;
+    margin-bottom: .75rem;
+    object-fit: cover;
+    width: 9rem
+}
+
+.interactive {
+    cursor: pointer
+}
+
+.justify-center {
+    justify-content: center
+}
+
+.modal-container {
+    align-items: center;
+    background: rgba(0, 0, 0, 0.3);
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    left: 0;
+    opacity: 0;
+    padding: 1rem;
+    position: fixed;
+    right: 0;
+    top: 0;
+    transition: .2s ease-out;
+    visibility: hidden;
+    z-index: 999
+}
+
+.modal-container .modal {
+    background: #fff;
+    border-radius: .5rem;
+    max-height: 80vh;
+    max-width: 40rem;
+    overflow: auto;
+    padding: 2rem;
+    position: relative;
+    transition: .2s ease-out
+}
+
+.modal-container.open {
+    opacity: 1;
+    visibility: visible
+}
+
+.row {
+    display: flex;
+    flex-direction: row
+}
+
+.title-container {
+    background: #967100;
+    color: #fff;
+    padding: .5rem;
+    text-align: center
 }
 
 .x-button {
-  cursor: pointer;
-  position: absolute;
-  top: 0.5rem;
-  right: 1rem;
-  font-size: 2rem;
-  font-weight: 100;
-  color: #aaa;
+    color: #aaa;
+    cursor: pointer;
+    font-size: 2rem;
+    font-weight: 100;
+    position: absolute;
+    right: 1rem;
+    top: .5rem
 }
 
-@media (max-width: 37rem), (max-height: 37rem) {
-  .modal-gallery {
-    display: none;
-  }
+a {
+    color: #000;
+    font-weight: 700
 }
 
-a.donate-with-crypto {
-  display: none;
+a:visited {
+    color: #888
+}
+
+body,
+html {
+    -moz-font-smoothing: antialiased!important;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased!important;
+    font-family: "Times Newer Roman", "Times New Roman", Times, serif;
+    height: 100vh;
+    line-height: 1.4;
+    margin: 0;
+    padding: 0;
+    text-rendering: optimizeLegibility!important
+}
+
+body.noscroll {
+    overflow: hidden
+}
+
+button {
+    background: #967100;
+    border: none;
+    border-radius: 2px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 400;
+    padding: .5rem 2rem
+}
+
+header {
+    flex: 0
+}
+
+@media (max-width: 37rem),
+(max-height: 37rem) {
+    .modal-gallery {
+        display: none
+    }
 }
 
 .medal-form {
-  /* This bit sets up the horizontal layout */
-  display: flex;
-  flex-direction: row;
-
-  /* This bit draws the box around it */
-  border: 1px solid grey;
-
-  /* I've used padding so you can see the edges of the elements. */
-  padding: 2px;
+    border: 1px solid grey;
+    display: flex;
+    flex-direction: row;
+    padding: 2px
 }
 
 .medal-form input {
-  /* Tell the input to use all the available space */
-  flex-grow: 2;
-  /* And hide the input's outline, so the form looks like the outline */
-  border: none;
+    border: none;
+    flex-grow: 2
+}
+
+a.donate-with-crypto {
+    display: none
 }
