--- a/assets/style.css
+++ b/assets/style.css
@@ -38,6 +38,147 @@
     url('./fonts/Garamond Bold Italic.woff') format('woff');
 }
 
+a {
+  color: #000;
+  font-weight: 700;
+}
+
+a:visited {
+  color: #888;
+}
+
+.no-kerning {
+  font-kerning: none;
+}
+
+body,
+html {
+  -moz-font-smoothing: antialiased !important;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased !important;
+  font-family: 'Garamond', 'Baskerville', 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
+  height: 100vh;
+  line-height: 1.4;
+  margin: 0;
+  padding: 0;
+  text-rendering: optimizeLegibility !important;
+}
+
+body.noscroll {
+  overflow: hidden;
+}
+
+button {
+  color: #967100;
+  background: #fff;
+  border: 1px solid #967100;
+  border-radius: 2px;
+  cursor: pointer;
+  font-family: 'Garamond';
+  font-size: 1rem;
+  font-weight: 700;
+  padding: 0.5rem 2rem;
+
+  transition: 0.3s;
+}
+
+button:hover {
+  color: #fff;
+  background: #967100;
+}
+
+header,
+footer {
+  background: #967100;
+  color: #fff;
+  flex: 0;
+  padding: 0.5rem;
+  text-align: center;
+}
+
+main {
+  padding-bottom: 1rem;
+}
+
+input {
+  background: rgba(150, 113, 0, 0.05);
+  padding: 0.5rem;
+}
+
+input,
+.contribute-form .composite-input {
+  flex: 1;
+  outline: none;
+  border: 1px solid #967100;
+  border-radius: 2px;
+  color: #967100;
+  font-family: 'Garamond';
+  font-size: 1rem;
+}
+
+.composite-input .label {
+  padding: 0.5rem;
+  border-right: 1px solid rgba(150, 113, 0, 0.5);
+}
+
+.composite-input input {
+  border: none;
+  border-radius: 0;
+}
+
+input::placeholder {
+  font-weight: 400;
+  color: rgba(150, 113, 0, 0.5);
+}
+
+.mt-h,
+.my-h,
+.m-h {
+  margin-top: 0.5rem;
+}
+
+.mr-h,
+.mx-h,
+.m-h {
+  margin-right: 0.5rem;
+}
+
+.mb-h,
+.my-h,
+.m-h {
+  margin-bottom: 0.5rem;
+}
+
+.ml-h,
+.mx-h,
+.m-h {
+  margin-left: 0.5rem;
+}
+
+.mt-1,
+.my-1,
+.m-1 {
+  margin-top: 1rem;
+}
+
+.mr-1,
+.mx-1,
+.m-1 {
+  margin-right: 1rem;
+}
+
+.mb-1,
+.my-1,
+.m-1 {
+  margin-bottom: 1rem;
+}
+
+.ml-1,
+.mx-1,
+.m-1 {
+  margin-left: 1rem;
+}
+
 #content {
   transition: 0.2s ease-out;
 }
@@ -71,6 +212,7 @@
 
 .content-container {
   margin: 3rem auto;
+  font-size: 1.1rem;
   max-width: 40rem;
   padding: 0 1rem;
 }
@@ -89,6 +231,20 @@
   font-size: 1.2rem;
   padding: 1rem;
   text-align: center;
+}
+
+.contribute-form {
+  display: flex;
+}
+
+.contribute-form input {
+  max-width: 5rem;
+  text-align: right;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  display: none;
 }
 
 .gallery {
@@ -190,56 +346,6 @@
   top: 0.5rem;
 }
 
-a {
-  color: #000;
-  font-weight: 700;
-}
-
-a:visited {
-  color: #888;
-}
-
-body,
-html {
-  -moz-font-smoothing: antialiased !important;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased !important;
-  font-family: Garamond,Baskerville,Baskerville Old Face,Hoefler Text,Times New Roman,serif;
-  height: 100vh;
-  line-height: 1.4;
-  margin: 0;
-  padding: 0;
-  text-rendering: optimizeLegibility !important;
-}
-
-body.noscroll {
-  overflow: hidden;
-}
-
-button {
-  background: #967100;
-  border: none;
-  border-radius: 2px;
-  color: #fff;
-  cursor: pointer;
-  font-size: 1rem;
-  font-weight: 400;
-  padding: 0.5rem 2rem;
-}
-
-header,
-footer {
-  background: #967100;
-  color: #fff;
-  flex: 0;
-  padding: 0.5rem;
-  text-align: center;
-}
-
-main {
-  padding-bottom: 1rem;
-}
-
 @media (max-width: 37rem), (max-height: 37rem) {
   .modal-gallery {
     display: none;
@@ -247,15 +353,8 @@ main {
 }
 
 .medal-form {
-  border: 1px solid grey;
   display: flex;
-  flex-direction: row;
-  padding: 2px;
-}
-
-.medal-form input {
-  border: none;
-  flex-grow: 2;
+  padding-top: 1rem;
 }
 
 a.donate-with-crypto {
