--- a/assets/style.css
+++ b/assets/style.css
@@ -100,6 +100,20 @@ main {
   padding-bottom: 1rem;
 }
 
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
+}
+
+.w-1 {
+  flex: 1;
+}
+
 input {
   background: rgba(150, 113, 0, 0.05);
   padding: 0.5rem;
@@ -107,13 +121,16 @@ input {
 
 input,
 .contribute-form .composite-input {
-  flex: 1;
   outline: none;
   border: 1px solid #967100;
   border-radius: 2px;
   color: #967100;
   font-family: 'Garamond';
   font-size: 1rem;
+}
+
+.contribute-modal {
+  text-align: center;
 }
 
 .composite-input .label {
@@ -320,9 +337,9 @@ input::-webkit-inner-spin-button {
   justify-content: center;
 }
 
-.modal-container {
+.modal-overlay {
   align-items: center;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.4);
   bottom: 0;
   display: flex;
   justify-content: center;
@@ -348,9 +365,13 @@ input::-webkit-inner-spin-button {
   transition: 0.2s ease-out;
 }
 
-.modal-container.open {
+.modal-overlay.open {
   opacity: 1;
   visibility: visible;
+}
+
+.modal-container {
+  position: relative;
 }
 
 .row {
@@ -365,17 +386,29 @@ input::-webkit-inner-spin-button {
   text-align: center;
 }
 
-.x-button {
-  background: rgba(255,255,255,0.8);
-  border-radius: 2px;
+.donate-divider {
+  color: rgba(150, 113, 0, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.donate-divider-line {
+  margin: .5rem;
+  flex: 1;
+  height: 1px;
+  background: rgba(150, 113, 0, 0.3);
+}
+
+.back-button svg {
   z-index: 9;
-  color: #aaa;
+  color: #fff;
   cursor: pointer;
-  font-size: 2rem;
-  font-weight: 100;
+  height: 1.5rem;
   position: absolute;
-  right: 1rem;
-  top: 0.5rem;
+  left: -2.5rem;
+  top: .5rem;
+  line-height: 1;
 }
 
 .uniswap {
@@ -410,10 +443,7 @@ input::-webkit-inner-spin-button {
   padding-top: 1rem;
 }
 
-a.donate-with-crypto {
-  display: none;
-}
-
 .searching {
   opacity: 50%;
 }
+
