--- a/assets/style.css
+++ b/assets/style.css
@@ -25,8 +25,8 @@
   font-family: 'Garamond';
   font-style: italic;
   font-weight: 400;
-  src: url('./fonts/Garamond Regular Italic.woff2') format('woff2'),
-    url('./fonts/Garamond Regular Italic.woff') format('woff');
+  src: url('./fonts/Garamond Regular Italic.woff') format('woff');
+  src: url('./fonts/Garamond Regular Italic.woff2') format('woff2');
 }
 
 @font-face {
@@ -34,8 +34,8 @@
   font-family: 'Garamond';
   font-style: italic;
   font-weight: 700;
-  src: url('./fonts/Garamond Bold Italic.woff2') format('woff2'),
-    url('./fonts/Garamond Bold Italic.woff') format('woff');
+  src: url('./fonts/Garamond Bold Italic.woff') format('woff');
+  src: url('./fonts/Garamond Bold Italic.woff2') format('woff2');
 }
 
 a {
