Fix CSS font relative path

--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -9,7 +9,7 @@
   font-family: 'Garamond';
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/Garamond Regular.woff2') format('woff2'), url('./fonts/Garamond Regular.woff') format('woff');
+  src: url('/fonts/Garamond Regular.woff2') format('woff2'), url('/fonts/Garamond Regular.woff') format('woff');
 }
 
 @font-face {
@@ -17,7 +17,7 @@
   font-family: 'Garamond';
   font-style: normal;
   font-weight: 700;
-  src: url('./fonts/Garamond Bold.woff2') format('woff2'), url('./fonts/Garamond Bold.woff') format('woff');
+  src: url('/fonts/Garamond Bold.woff2') format('woff2'), url('/fonts/Garamond Bold.woff') format('woff');
 }
 
 @font-face {
@@ -25,8 +25,8 @@
   font-family: 'Garamond';
   font-style: italic;
   font-weight: 400;
-  src: url('./fonts/Garamond Regular Italic.woff') format('woff');
-  src: url('./fonts/Garamond Regular Italic.woff2') format('woff2');
+  src: url('/fonts/Garamond Regular Italic.woff') format('woff');
+  src: url('/fonts/Garamond Regular Italic.woff2') format('woff2');
 }
 
 @font-face {
@@ -34,8 +34,8 @@
   font-family: 'Garamond';
   font-style: italic;
   font-weight: 700;
-  src: url('./fonts/Garamond Bold Italic.woff') format('woff');
-  src: url('./fonts/Garamond Bold Italic.woff2') format('woff2');
+  src: url('/fonts/Garamond Bold Italic.woff') format('woff');
+  src: url('/fonts/Garamond Bold Italic.woff2') format('woff2');
 }
 
 a {
