--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -478,36 +478,36 @@ input::-webkit-inner-spin-button {
 }
 
 .clicked::before {
-  content: "Copied!";
-  position:absolute;
+  content: 'Copied!';
+  position: absolute;
 
-  left:50%;
-  transform:translateX(-50%);
+  left: 50%;
+  transform: translateX(-50%);
 
-  bottom:100%;
-  margin-bottom:15px;
+  bottom: 100%;
+  margin-bottom: 15px;
 
-  padding: .5rem;
-  border-radius:4px;
-  background:#000;
+  padding: 0.5rem;
+  border-radius: 4px;
+  background: #000;
   color: #fff;
-  text-align:center;
-  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+  text-align: center;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-weight: 400;
 }
 
 .clicked::after {
-  content: "";
-  position:absolute;
+  content: '';
+  position: absolute;
 
-  bottom:100%;
-  margin-bottom:0;
+  bottom: 100%;
+  margin-bottom: 0;
 
-  left:50%;
-  transform:translateX(-50%);
+  left: 50%;
+  transform: translateX(-50%);
 
   /* the arrow */
-  border:10px solid #000;
+  border: 10px solid #000;
   border-color: black transparent transparent transparent;
 }
 
