--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -368,7 +368,7 @@ input::-webkit-inner-spin-button {
   background: #fff;
   border-radius: 3px;
   border: 1px solid #967100;
-  box-shadow: 0 13px 27px -5px rgba(75, 60, 0, 0.25),0 8px 16px -8px rgba(0,0,0,0.3);
+  box-shadow: 0 13px 27px -5px rgba(75, 60, 0, 0.25), 0 8px 16px -8px rgba(0, 0, 0, 0.3);
   max-height: 80vh;
   max-width: 40rem;
   overflow: auto;
@@ -424,7 +424,7 @@ input::-webkit-inner-spin-button {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .back-button svg {
