feat(contribute): replace stripe with hackbank

--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -454,6 +454,14 @@ input::-webkit-inner-spin-button {
   margin: -3rem;
 }
 
+.hackbank-modal .iframe-container {
+  width: 80vw;
+  max-width: 512px;
+  min-width: 20rem;
+  height: 40rem;
+  margin: -3rem;
+}
+
 .coinbase-commerce-modal .back-button {
   display: none;
 }
